--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,8 @@
   <script src="https://cdn.firebase.com/js/client/1.0.15/firebase.js"></script>
   <!-- AngularFire Library -->
   <script src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.min.js"></script>
+  <!-- FirebaseSimpleLogin -->
+  <script src='https://cdn.firebase.com/js/simple-login/1.4.1/firebase-simple-login.js'></script>
 
   <!-- Custom scripts -->
   <script src="js/app.js"></script>
