added logout method, about to refactor to use service

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,8 @@
 <body>
 
   <!-- #Top bar  -->
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top"
+        ng-controller="AuthController">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -35,8 +36,9 @@
           <!-- <li class="active"><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li> -->
-          <li><a href="#">Log in</a></li>
-
+          <li><a href="#/login">Log in</a></li>
+          <li><a href="javascript:;"
+               ng-click="logout()">Log out</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
